syntax = "proto3";
option csharp_namespace = "Itmo.Dev.Asap.Github.Users";

import "models/github_user.proto";

service GithubUserService {
  rpc FindByIds(FindByIdsRequest) returns (FindByIdsResponse);
}

message FindByIdsRequest {
  repeated string user_ids = 1;
}

message FindByIdsResponse {
  repeated GithubUser users = 1;
}